--- a/public/project-admin-views/assets/less/custom.less
+++ b/public/project-admin-views/assets/less/custom.less
@@ -787,6 +787,11 @@ select, select option
 {
 	margin-top: 3px;
 }
+.m-r-15
+{
+	margin-top: 15px;
+}
+
 .filter-label
 {
 	float: left;
